all database features working now
